# comrude

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: config.toml  default.toml
crates/comrude/: Cargo.toml
crates/comrude-core/: Cargo.toml
crates/comrude-core/demo_sessions/: 1451713c-8d93-426d-8c73-142db8e1c637.json
crates/comrude-core/examples/: memory_usage.rs
crates/comrude-core/src/: config.rs  engine.rs  error.rs  lib.rs  memory.rs  types.rs
crates/comrude-providers/: Cargo.toml
crates/comrude-providers/src/: anthropic.rs  lib.rs  manager.rs  ollama.rs  openai.rs  traits.rs
crates/comrude-shell/: Cargo.toml
crates/comrude-shell/src/: app.rs  events.rs  lib.rs  ui.rs
crates/comrude-tools/: Cargo.toml
crates/comrude-tools/src/: file_tools.rs  lib.rs
crates/comrude/src/: lib.rs  main.rs
src/: main.rs
