[workspace]
resolver = "2"
members = [
    "crates/comrude",
    "crates/comrude-core",
    "crates/comrude-shell", 
    "crates/comrude-providers",
    "crates/comrude-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Comrude Contributors"]
license = "MIT"
homepage = "https://github.com/username/comrude"
repository = "https://github.com/username/comrude"
documentation = "https://comrude.dev"
readme = "README.md"
keywords = ["ai", "cli", "development", "assistant", "llm"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# TUI Framework
ratatui = "0.24"
crossterm = "0.27"

# Configuration
config = "0.13"
dirs = "5.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Syntax Highlighting
syntect = "5.1"

# Async Traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID for request tracking
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# TTY detection
atty = "0.2"

# Unix system calls for process group management
libc = "0.2"

# Internal crates
comrude-core = { path = "crates/comrude-core" }
comrude-shell = { path = "crates/comrude-shell" }
comrude-providers = { path = "crates/comrude-providers" }
comrude-tools = { path = "crates/comrude-tools" }