[package]
name = "comrude-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for Comrude - data structures, config, and engine"

[lib]
name = "comrude_core"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Configuration
config.workspace = true
dirs.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Async traits
async-trait.workspace = true

# Logging
tracing.workspace = true

# HTTP client
reqwest.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"