[package]
name = "comrude-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "LLM provider implementations for Comrude"

[lib]
name = "comrude_providers"
path = "src/lib.rs"

[dependencies]
# Workspace crates
comrude-core.workspace = true

# HTTP Client
reqwest.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Async traits
async-trait.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"